--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,9 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#000000" />
-    <meta name="DSMovie" content="Web site created using create-react-app" />
-    <link rel="apple-toch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="description" content="Web site created using create-react-app" />
     <title>DsMovie</title>
 </head>
 <body>
